# sim6502

./: .gitignore  LICENSE  README.md  apple_one.py  assembly.py  codebook.toml  config.py  console.py  cpu.py  main.py  memory.py  mmio.py  pyproject.toml  runtime.py  screen_object_driver.rb  sim6502.toml  simple_ui_driver.rb  style.tcss  system.rb  tui.py  ui.rb
.zed/: debug.json  settings.json  tasks.json
apple_one/: __init__.py  api.py  devices.py  style.tcss  system.py  terminal.py  tui.py
headless/: __init__.py  style.tcss  system.py  tui.py
tests/: test_assembly.py  test_cpu.py  test_memory.py
tools/: hex2bin.py  profile_.py
