[project]
name = "sim6502"
version = "0.1.0"
description = "A simple MOS 6502 CPU emulator written in Python."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 145

[tool.ruff.lint]
select = [ "F", "E", "W", "I", "D", "SIM", "B" ]
ignore = ["D212", "D401", "D404"]
exclude = [ "tests" ]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov >= 7.1.0",
    "pytest-mock >= 3.15.1"
]
